--- a/Graphics/Graphics/Graphics.vcxproj.filters
+++ b/Graphics/Graphics/Graphics.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="WindowSettings.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="DirectXSettings.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
