--- a/Graphics/Graphics/Graphics.vcxproj.filters
+++ b/Graphics/Graphics/Graphics.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="CGame.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="CEntity.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="CCube.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GraphicsPCH.h">
@@ -36,6 +42,18 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="DirectXSettings.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="ConstantBuffer.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="CEntity.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="VertexPosColor.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="CCube.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
