--- a/Graphics/Graphics/Graphics.vcxproj.filters
+++ b/Graphics/Graphics/Graphics.vcxproj.filters
@@ -13,6 +13,24 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Headerdateien\Entities">
+      <UniqueIdentifier>{53828b6d-823e-41e1-becb-488e658cb874}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Quelldateien\Entities">
+      <UniqueIdentifier>{78a24a13-35ba-4767-b5ba-f10f724adb70}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Headerdateien\Entities\Textured">
+      <UniqueIdentifier>{ff8cecf4-5d4e-41d0-a6e3-6a18ce2aad6c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Quelldateien\Entities\Textured">
+      <UniqueIdentifier>{065e51a2-f825-4d0a-a7bc-753d9ac2dc36}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Quelldateien\Entities\Simple">
+      <UniqueIdentifier>{3e08b228-0f33-42bc-ae66-1184afe00984}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Headerdateien\Entities\Simple">
+      <UniqueIdentifier>{51f19248-6f98-44e1-a504-69c8b733bff6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -24,23 +42,32 @@
     <ClCompile Include="Game.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="Entity.cpp">
-      <Filter>Quelldateien</Filter>
-    </ClCompile>
-    <ClCompile Include="Cube.cpp">
-      <Filter>Quelldateien</Filter>
-    </ClCompile>
     <ClCompile Include="ContentManager.cpp">
-      <Filter>Quelldateien</Filter>
-    </ClCompile>
-    <ClCompile Include="Oktaeder.cpp">
-      <Filter>Quelldateien</Filter>
-    </ClCompile>
-    <ClCompile Include="Sphere.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="InputManager.cpp">
       <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="Cube.cpp">
+      <Filter>Quelldateien\Entities\Simple</Filter>
+    </ClCompile>
+    <ClCompile Include="Entity.cpp">
+      <Filter>Quelldateien\Entities\Simple</Filter>
+    </ClCompile>
+    <ClCompile Include="Oktaeder.cpp">
+      <Filter>Quelldateien\Entities\Simple</Filter>
+    </ClCompile>
+    <ClCompile Include="Sphere.cpp">
+      <Filter>Quelldateien\Entities\Simple</Filter>
+    </ClCompile>
+    <ClCompile Include="TexturedEntity.cpp">
+      <Filter>Quelldateien\Entities\Textured</Filter>
+    </ClCompile>
+    <ClCompile Include="TextureData.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="TexturedPlane.cpp">
+      <Filter>Quelldateien\Entities\Textured</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -59,26 +86,38 @@
     <ClInclude Include="ConstantBuffer.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
-    <ClInclude Include="Entity.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
     <ClInclude Include="VertexPosColor.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
-    <ClInclude Include="Cube.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="ContentManager.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
-    <ClInclude Include="Oktaeder.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
-    <ClInclude Include="Sphere.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
     <ClInclude Include="InputManager.h">
       <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="Helper.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="Cube.h">
+      <Filter>Headerdateien\Entities\Simple</Filter>
+    </ClInclude>
+    <ClInclude Include="Entity.h">
+      <Filter>Headerdateien\Entities\Simple</Filter>
+    </ClInclude>
+    <ClInclude Include="Oktaeder.h">
+      <Filter>Headerdateien\Entities\Simple</Filter>
+    </ClInclude>
+    <ClInclude Include="Sphere.h">
+      <Filter>Headerdateien\Entities\Simple</Filter>
+    </ClInclude>
+    <ClInclude Include="TexturedEntity.h">
+      <Filter>Headerdateien\Entities\Textured</Filter>
+    </ClInclude>
+    <ClInclude Include="TextureData.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="TexturedPlane.h">
+      <Filter>Headerdateien\Entities\Textured</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -88,5 +127,14 @@
     <FxCompile Include="SimplePixelShader.hlsl">
       <Filter>Ressourcendateien</Filter>
     </FxCompile>
+    <FxCompile Include="TexturedVertexShader.hlsl">
+      <Filter>Ressourcendateien</Filter>
+    </FxCompile>
+    <FxCompile Include="TexturedPixelShader.hlsl">
+      <Filter>Ressourcendateien</Filter>
+    </FxCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
