--- a/Graphics/Graphics/Graphics.vcxproj
+++ b/Graphics/Graphics/Graphics.vcxproj
@@ -143,10 +143,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AssetManager.cpp" />
+    <ClCompile Include="Button2D.cpp" />
     <ClCompile Include="ContentManager.cpp" />
     <ClCompile Include="Cube.cpp" />
+    <ClCompile Include="Cursor.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="Entity2D.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Image2D.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Oktaeder.cpp" />
     <ClCompile Include="GraphicsPCH.cpp" />
@@ -159,11 +163,15 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AssetManager.h" />
+    <ClInclude Include="Button2D.h" />
     <ClInclude Include="ContentManager.h" />
     <ClInclude Include="Cube.h" />
+    <ClInclude Include="Cursor.h" />
     <ClInclude Include="Entity.h" />
+    <ClInclude Include="Entity2D.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Helper.h" />
+    <ClInclude Include="Image2D.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="Oktaeder.h" />
     <ClInclude Include="ConstantBuffer.h" />
